--- a/src/app/recipies/recipie-detail/recipie-detail.component.html
+++ b/src/app/recipies/recipie-detail/recipie-detail.component.html
@@ -23,9 +23,9 @@
       Manage Recipie <span class="caret"></span>
     </button>
     <ul class="dropdown-menu">
-      <li><a href="#" (click)="onAddToShoppingList()" style="cursor: pointer">To Shopping List</a></li>
+      <li><a (click)="onAddToShoppingList()" style="cursor: pointer">To Shopping List</a></li>
       <li><a style="cursor: pointer" (click)="onEditRecipe()">Edit Recipie</a></li>
-      <li><a style="cursor: pointer">Delete Recipie</a></li>
+      <li><a style="cursor: pointer" (click)="onDeleteRecipie()">Delete Recipie</a></li>
     </ul>
   </div>
 </div>
