--- a/src/app/recipies/recipie-edit/recipie-edit.component.html
+++ b/src/app/recipies/recipie-edit/recipie-edit.component.html
@@ -3,8 +3,10 @@
     <form [formGroup]="recipieForm" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="col-xs-12">
-          <button type="submit" class="btn btn-success">Save</button>
-          <button type="button" class="btn bg-danger">Cancel</button>
+          <button type="submit"
+                  class="btn btn-success"
+                  [disabled]="!recipieForm.valid">Save</button>
+          <button type="button" class="btn bg-danger" (click)="onCancel()">Cancel</button>
         </div>
       </div>
 
@@ -27,14 +29,15 @@
             <input type="text"
                    id="imagePath"
                    formControlName="imagePath"
-                   class="form-control">
+                   class="form-control"
+                   #imagePath>
           </div>
         </div>
       </div>
 
       <div class="row">
         <div class="col-xs-12">
-          <img src="" class="img-responsive">
+          <img [src]="imagePath.value" class="img-responsive">
         </div>
       </div>
 
@@ -55,7 +58,8 @@
         <div class="col-xs-12" formArrayName="ingredients">
           <div class="row"
                *ngFor="let ingredientCtrl of recipieForm.get('ingredients').controls; let i=index"
-               [formGroupName]="i">
+               [formGroupName]="i"
+                style="margin-top: 10px">
             <div class="col-xs-8">
               <input type="text"
                 class="form-control"
@@ -69,9 +73,23 @@
             </div>
 
             <div class="col-xs-2">
-              <button class="btn btn-danger">X</button>
+              <button
+                type="button"
+                class="btn btn-danger"
+                (click)="onDeleteIngredient(i)">X</button>
             </div>
           </div>
+
+          <hr />
+
+          <div class="row">
+            <div class="col-xs-12">
+              <button class="btn btn-success"
+                      type="button"
+                      (click)="onAddIngredient()">Add Ingredient</button>
+            </div>
+          </div>
+
         </div>
       </div>
 
